# ML-P4

./: CMakeLists.txt  Doxyfile  README.md  main.cpp  train_test_split.py
data/: digits_test.csv  digits_train.csv  iris_test.csv  iris_train.csv
docs/html/: annotated.html  annotated_dup.js  classNeuron-members.html  classNeuron.html  classNeuron.js  classNeuronLayer-members.html  classNeuronLayer.html  classNeuronLayer.js  classNeuronNetwork-members.html  classNeuronNetwork.html  classNeuronNetwork.js  classes.html  dir_0be001e076346284cf294e590c83e20b.html  dir_101ac6e9245110eb379ba110f8164517.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_13e138d54eb8818da29c3992edef070a.js  dir_1931ed50a50fcfaba31d60ba6bbbab02.html  dir_1cbc74bc22d7d81ee12a29caa96b5b64.html  dir_52f307aef3b8bed3a21ae20412c4ab45.html  dir_571baa546d31e221a2c13397fe17e101.html  dir_5c8a75f63b79b3bc7642d072dad8d2d8.html  dir_5e0a3bcbb9793dec699aaa972aa5ee7e.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68def62d34bdcd9a1f109a12da3cfb88.html  dir_68def62d34bdcd9a1f109a12da3cfb88.js  dir_8a5f696062502258954cb009b49e4bdc.html  dir_8fe539ef0977bed51ecafc05020cf2a3.html  dir_aa95d84be9588e3447dbe099ad6d8d33.html  dir_b0856f6b0d80ccb263b2f415c91f9e17.html  dir_b0856f6b0d80ccb263b2f415c91f9e17.js  dir_b29cc1a657455f37e2e389b54a64f1e6.html  dir_ea597c1cc0155e5e13062a73a354e4bd.html  dir_f09d564695a8a7f5713b0ef37bdf7d31.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  globals.html  (+18 more)
src/: neuron.cpp  neuronlayer.cpp  neuronnetwork.cpp
test/: parsedata.cpp  test.cpp
(+30 files in other folders)
